--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
         <div class="description">
           <h2>Historica</h2>
           <p>This Website allows the user to find events that <br>
-            that occured on a particular date in history. It fetches <br> 
+             occured on a particular date in history. It fetches <br> 
             data from an API and presents it to the user in an <br>
             organised manner. The technologies used are javascript, ejs, jQuery, <br>nodejs, html 
             and css.
