modify file structure

--- a/index.html
+++ b/index.html
@@ -15,10 +15,23 @@
       <ul>
         <li><a href="#projects">Projects</a></li>
         <li><a href="#about">About</a></li>
-        <li><a href="#contact">contact</a></li>
+        <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
     <a href="https://github.com/Sipher229" target="_blank" class="github-link">Github</a>
+    <div class="menu-button">
+      <div class="menu-icon1"></div>
+      <div class="menu-icon2" ></div>
+      <div class="menu-icon3"></div>
+      <div class="mobile-menu">
+        <ul>
+          <li><a href="#projects">Projects</a></li>
+          <li><a href="#about">About</a></li>
+          <li><a href="#contact">Contact</a></li>
+          <li><a href="https://github.com/Sipher229" target="_blank">Github</a></li>
+        </ul>
+      </div>
+    </div>
   </nav>
 </header>
 <main>
@@ -27,8 +40,8 @@
       <div class="left">
         <h1>Hello, I am Philippe Neri Singizwa,<br>
             <span>a fullstack web developer</span></h1>
-        <p>Currently a student at the University of Ottawa. <br>
-          I am seeking to apply my web development skills in developing dynamic and impactful websites</p>
+        <p>
+          I am seeking to apply my web development skills in developing dynamic an impactful websites</p>
         <a href="https://drive.google.com/file/d/1e6eROqu70UthnO8vhocE9eUmI_6u_1wG/view?usp=drive_link" target="_blank">Resume</a>
       </div>
       <div class="right">
@@ -37,8 +50,38 @@
     </div>
   </section>
   <section id="projects">
+    <h1>Projects</h1>
     <div class="project-wrapper">
-      <h1>Projects</h1>
+      <div class="project">
+        <div class="screen-shot">
+          <img src="assets/Journal.UI2.png" alt="website screenshot">
+        </div>
+        <div class="description">
+          <h2>MyJournal</h2>
+          <p>
+            Like the name says, this website serves as a journal. A user registers <br>
+            and can then start writing about their daily life. <br>
+            The users can also view, edit, and delete any of their content. <br>
+            The main technologies are nodejs/express, sql<br> postgres, React, 
+            Tailwind css.
+          </p>
+          <a href="https://github.com/Sipher229/MyJournal-frontend" target="_blank">More on github</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="screen-shot">
+          <img src="assets/zomato.UI.png" alt="website screenshot">
+        </div>
+        <div class="description">
+          <h2>Zomato Clone</h2>
+          <p>
+            This is a clone of the famous zomato restaurant website in India. <br>
+            It is simply the landing page of the website. 
+            It was built with React.<br>
+          </p>
+          <a href="https://github.com/Sipher229/Zomato-clone" target="_blank">More on github</a>
+        </div>
+      </div>
       <div class="project">
         <div class="screen-shot">
           <img src="assets/historica.jpg" alt="website screenshot">
@@ -46,7 +89,7 @@
         <div class="description">
           <h2>Historica</h2>
           <p>This Website allows the user to find events that <br>
-             occured on a particular date in history. It fetches <br> 
+            that occured on a particular date in history. It fetches <br> 
             data from an API and presents it to the user in an <br>
             organised manner. The technologies used are javascript, ejs, jQuery, <br>nodejs, html 
             and css.
@@ -57,18 +100,18 @@
       </div>
       <div class="project">
         <div class="screen-shot">
-          <img src="assets/journal.jpg" alt="website screenshot">
+          <img src="assets/flashcard.UI.png" alt="website screenshot">
         </div>
         <div class="description">
-          <h2>Journal</h2>
+          <h2>Flashcard APP</h2>
           <p>
-            Like the name says, this website serves as a journal. A user registers <br>
-            and can then start writing about their daily life. <br>
-            The users can also view, edit, and delete any of their content. <br>
-            The main technologies are nodejs, sql<br> database(postgres), jQuery, 
-            javascript, html and css.
+            This app allow the user to study using the flascard style of learning. 
+            A user creates a key word to show  on the front of the app and a description to be hidden.
+            They can later read the key word and try to remember the description or the answer.
+            If they wanna checkout the description they can simpy let it show. The main technologies are Reactjs,<br>Context API 
+            Tailwind css.
           </p>
-          <a href="https://github.com/Sipher229/journal.git" target="_blank">More on github</a>
+          <a href="https://github.com/Sipher229/flashcard-app" target="_blank">More on github</a>
         </div>
       </div>
     </div>
@@ -80,11 +123,11 @@
         <img src="assets/GZKWE9385.JPG" alt="profile" />
         <small>Accuracy Speed Perseverance</small>
       </div>
-      <p>I am currently a student at the University of Ottawa, where I am pursuing a degree <br>
-        in Chemical Engineering and Computing Technology. Fueled by my desire to learn and my <br>
-        love for programming, I followed a web development bootcamp offered by Dr. Angela Yu through Udemy. <br>
-        Through this bootcamp and personal research, I leant the following crucial web development <br>
-        technologies: Javascript, python, React, JQuery, Nodejs, REST API, HTML, CSS, bootstrap, SQL, and git.
+      <p>I am a selfmotivated, openminded and goal oriented individual. I am intrigued by web applications; in particular, the mindset and skills behind
+         the creation of beautiful attractive and intuitive user interfaces, as well as the power to build powerful backends to empower these UIs.
+        Fueled by my desire to learn and my
+        love for programming, I followed a web development bootcamp offered by Dr. Angela Yu through Udemy.
+        Through this bootcamp and personal research, I aquired the the skills and knowledge to allow me to build powerful and efficient web applications.
       </p>
       <a href="https://drive.google.com/file/d/1e6eROqu70UthnO8vhocE9eUmI_6u_1wG/view?usp=drive_link" target="_blank">Resume</a>
     </div>
