add proper links

--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
-    <a href="https://github.com/Sipher229" target="_blank" class="github-link">Github</a>
+    <a href="https://sipher229.github.io/sipher229.portfolio/" target="_blank" class="github-link">Github</a>
     <div class="menu-button">
       <div class="menu-icon1"></div>
       <div class="menu-icon2" ></div>
@@ -28,7 +28,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="https://github.com/Sipher229" target="_blank">Github</a></li>
+          <li><a href="https://sipher229.github.io/sipher229.portfolio/" target="_blank">Github</a></li>
         </ul>
       </div>
     </div>
@@ -42,7 +42,7 @@
             <span>a fullstack web developer</span></h1>
         <p>
           I am seeking to apply my web development skills in developing dynamic an impactful websites</p>
-        <a href="https://drive.google.com/file/d/1e6eROqu70UthnO8vhocE9eUmI_6u_1wG/view?usp=drive_link" target="_blank">Resume</a>
+        <a href="https://drive.google.com/file/d/16CjAIA1SDezZw1YxF539hgpIB-IiEKn5/view?usp=sharing" target="_blank">Resume</a>
       </div>
       <div class="right">
         <img src="assets/profile.jpg" alt="profile">
@@ -129,7 +129,7 @@
         love for programming, I followed a web development bootcamp offered by Dr. Angela Yu through Udemy.
         Through this bootcamp and personal research, I aquired the the skills and knowledge to allow me to build powerful and efficient web applications.
       </p>
-      <a href="https://drive.google.com/file/d/1e6eROqu70UthnO8vhocE9eUmI_6u_1wG/view?usp=drive_link" target="_blank">Resume</a>
+      <a href="https://drive.google.com/file/d/16CjAIA1SDezZw1YxF539hgpIB-IiEKn5/view?usp=sharing" target="_blank">Resume</a>
     </div>
   </section>
   <section id="contact">
