--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
         <li><a href="#contact">Contact</a></li>
       </ul>
     </div>
-    <a href="https://sipher229.github.io/sipher229.portfolio/" target="_blank" class="github-link">Github</a>
+    <a href="https://github.com/Sipher229" target="_blank" class="github-link">Github</a>
     <div class="menu-button">
       <div class="menu-icon1"></div>
       <div class="menu-icon2" ></div>
@@ -28,7 +28,7 @@
           <li><a href="#projects">Projects</a></li>
           <li><a href="#about">About</a></li>
           <li><a href="#contact">Contact</a></li>
-          <li><a href="https://sipher229.github.io/sipher229.portfolio/" target="_blank">Github</a></li>
+          <li><a href="https://github.com/Sipher229" target="_blank">Github</a></li>
         </ul>
       </div>
     </div>
