correct grammatical errors

--- a/index.html
+++ b/index.html
@@ -123,11 +123,11 @@
         <img src="assets/GZKWE9385.JPG" alt="profile" />
         <small>Accuracy Speed Perseverance</small>
       </div>
-      <p>I am a selfmotivated, openminded and goal oriented individual. I am intrigued by web applications; in particular, the mindset and skills behind
-         the creation of beautiful attractive and intuitive user interfaces, as well as the power to build powerful backends to empower these UIs.
+      <p>I am a selfmotivated, openminded and goal-oriented individual. I am intrigued by web applications; in particular, the mindset and skills behind
+         the creation of beautiful, attractive, and intuitive user interfaces, as well as the power to build powerful backends to empower these interfaces.
         Fueled by my desire to learn and my
-        love for programming, I followed a web development bootcamp offered by Dr. Angela Yu through Udemy.
-        Through this bootcamp and personal research, I aquired the the skills and knowledge to allow me to build powerful and efficient web applications.
+        love for programming, I followed a web development bootcamp offered by Dr. Angela Yu on Udemy.
+        Through this bootcamp and personal research, I aquired the skills and knowledge to allow me to build beautiful, intuitive, and efficient web applications.
       </p>
       <a href="https://drive.google.com/file/d/16CjAIA1SDezZw1YxF539hgpIB-IiEKn5/view?usp=sharing" target="_blank">Resume</a>
     </div>
