correct grammatical errors

--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
             Like the name says, this website serves as a journal. A user registers <br>
             and can then start writing about their daily life. <br>
             The users can also view, edit, and delete any of their content. <br>
-            The main technologies are nodejs/express, sql<br> postgres, React, 
+            The main technologies used are nodejs/express, sql<br> postgres, React, Redux, and
             Tailwind css.
           </p>
           <a href="https://github.com/Sipher229/MyJournal-frontend" target="_blank">More on github</a>
@@ -105,10 +105,10 @@
         <div class="description">
           <h2>Flashcard APP</h2>
           <p>
-            This app allow the user to study using the flascard style of learning. 
-            A user creates a key word to show  on the front of the app and a description to be hidden.
+            This app allows the user to study using the flascard style of learning. 
+            A user creates a key word to show  on the front of the card and a description to be hidden.
             They can later read the key word and try to remember the description or the answer.
-            If they wanna checkout the description they can simpy let it show. The main technologies are Reactjs,<br>Context API 
+            If they wanna checkout the description they can simpy let it show. The main technologies are React,<br>Context API 
             Tailwind css.
           </p>
           <a href="https://github.com/Sipher229/flashcard-app" target="_blank">More on github</a>
