correct grammatical errors

--- a/index.html
+++ b/index.html
@@ -123,7 +123,7 @@
         <img src="assets/GZKWE9385.JPG" alt="profile" />
         <small>Accuracy Speed Perseverance</small>
       </div>
-      <p>I am a selfmotivated, openminded and goal-oriented individual. I am intrigued by web applications; in particular, the mindset and skills behind
+      <p>I am a self-motivated, open-minded and goal-oriented individual. I am intrigued by web applications; in particular, the mindset and skills behind
          the creation of beautiful, attractive, and intuitive user interfaces, as well as the power to build powerful backends to empower these interfaces.
         Fueled by my desire to learn and my
         love for programming, I followed a web development bootcamp offered by Dr. Angela Yu on Udemy.
