fix safari compatibility

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
       </ul>
     </div>
     <a href="https://github.com/Sipher229" target="_blank" class="github-link">Github</a>
-    <div class="menu-button">
+    <button class="menu-button">
       <div class="menu-icon1"></div>
       <div class="menu-icon2" ></div>
       <div class="menu-icon3"></div>
@@ -31,7 +31,7 @@
           <li><a href="https://github.com/Sipher229" target="_blank">Github</a></li>
         </ul>
       </div>
-    </div>
+    </button>
   </nav>
 </header>
 <main>
@@ -62,8 +62,6 @@
             Like the name says, this website serves as a journal. A user registers <br>
             and can then start writing about their daily life. <br>
             The users can also view, edit, and delete any of their content. <br>
-            The main technologies used are nodejs/express, sql<br> postgres, React, Redux, and
-            Tailwind css.
           </p>
           <a href="https://github.com/Sipher229/MyJournal-frontend" target="_blank">More on github</a>
         </div>
@@ -106,10 +104,8 @@
           <h2>Flashcard APP</h2>
           <p>
             This app allows the user to study using the flascard style of learning. 
-            A user creates a key word to show  on the front of the card and a description to be hidden.
+            A user creates a key word to show on the front of the card and a description to be hidden.
             They can later read the key word and try to remember the description or the answer.
-            If they wanna checkout the description they can simpy let it show. The main technologies are React,<br>Context API 
-            Tailwind css.
           </p>
           <a href="https://github.com/Sipher229/flashcard-app" target="_blank">More on github</a>
         </div>
