add new project

--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
         <a href="https://drive.google.com/file/d/16CjAIA1SDezZw1YxF539hgpIB-IiEKn5/view?usp=sharing" target="_blank">Resume</a>
       </div>
       <div class="right">
-        <img src="assets/profile.jpg" alt="profile">
+        <img src="assets/GZKWE9385.JPG" alt="profile">
       </div>
     </div>
   </section>
@@ -64,6 +64,20 @@
             The users can also view, edit, and delete any of their content. <br>
           </p>
           <a href="https://github.com/Sipher229/MyJournal-frontend" target="_blank">More on github</a>
+        </div>
+      </div>
+      <div class="project">
+        <div class="screen-shot">
+          <img src="assets/Ricardo-eyewear-ecommerce.png" alt="website screenshot">
+        </div>
+        <div class="description">
+          <h2>Ricardo Eyewear</h2>
+          <p>
+            Ricardo Eyewear is a modern online platform for purchasing various types of eyeglasses.
+            The website offers a convenient shopping experience, allowing customers to browse a wide
+            selection of eyewear styles and place orders for home delivery.
+          </p>
+          <a href="https://github.com/Sipher229/Ricardo-eyewear-ecommerce" target="_blank">More on github</a>
         </div>
       </div>
       <div class="project">
@@ -96,20 +110,7 @@
           <a href="https://github.com/Sipher229/Historica-app" target="_blank">More on github</a>
         </div>
       </div>
-      <div class="project">
-        <div class="screen-shot">
-          <img src="assets/flashcard.UI.png" alt="website screenshot">
-        </div>
-        <div class="description">
-          <h2>Flashcard APP</h2>
-          <p>
-            This app allows the user to study using the flascard style of learning. 
-            A user creates a key word to show on the front of the card and a description to be hidden.
-            They can later read the key word and try to remember the description or the answer.
-          </p>
-          <a href="https://github.com/Sipher229/flashcard-app" target="_blank">More on github</a>
-        </div>
-      </div>
+      
     </div>
   </section>
   <section id="about">
