Add new project

--- a/index.html
+++ b/index.html
@@ -54,16 +54,16 @@
     <div class="project-wrapper">
       <div class="project">
         <div class="screen-shot">
-          <img src="assets/Journal.UI2.png" alt="website screenshot">
+          <img src="assets/SalesVerse-employee.png" alt="website screenshot">
         </div>
         <div class="description">
-          <h2>MyJournal</h2>
+          <h2>SalesVerse</h2>
           <p>
-            Like the name says, this website serves as a journal. A user registers <br>
-            and can then start writing about their daily life. <br>
-            The users can also view, edit, and delete any of their content. <br>
+            An HR tool for performance and productivity tracking, it is designed to enhance productivity by fostering <br>
+            stronger teamwork and cultivating a deeper sense of responsibility among team members. This solution <br>
+            empowers teams to communicate effectively, align on goals seamlessly, and build a culture of accountability. <br>
           </p>
-          <a href="https://github.com/Sipher229/MyJournal-frontend" target="_blank">More on github</a>
+          <a href="https://wmsalestracker.com/" target="_blank">Visit site</a>
         </div>
       </div>
       <div class="project">
