update URL for salesverse home page

--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             stronger teamwork and cultivating a deeper sense of responsibility among team members. This solution <br>
             empowers teams to communicate effectively, align on goals seamlessly, and build a culture of accountability. <br>
           </p>
-          <a href="https://wmsalestracker.com/" target="_blank">Visit site</a>
+          <a href="https://salesverse.org/" target="_blank">Visit site</a>
         </div>
       </div>
       <div class="project">
